@@ -1,3 +1,6 @@
+20-Sep-2016 - MLS - Version 3.4
+    - Moved the init for the CTE params back to the top of the code, it had gotten moved below the header update for the information
+
 14-Sep-2016 - MLS - Version 3.4
     - CTE subarrays enabled for user supported subarrays with physical overscan
 
