@@ -1,4 +1,4 @@
 /* This string is written to the output primary header as CAL_VER. */
 
-# define WF3_CAL_VER "3.4(14-Sep-2016)"
+# define WF3_CAL_VER "3.4(20-Sep-2016)"
 # define WF3_CAL_VER_NUM "3.4"
